# PSEUDO

./: .env  main.py  pyproject.toml
routers/: __init__.py
routers/generate/: __init__.py  generate.py  prompts.py
static/css/: index.css
static/js/: index.js
templates/: index.html
